--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,17 @@ header {
     color: white;
     font-size: 16px;
     margin-left: 5px;
-    padding: 15px 30px;
+    padding: 15px 15px;
+}
+
+.search-form-button-get-position {
+    background-color: #885df1;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    font-size: 16px;
+    margin-left: 5px;
+    padding: 15px 15px;
 }
 
 .search-form-button-search:hover {
