--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,7 @@ main {
 
 .weather-app-details strong {
     color: #f65282;
+    opacity: 0.8;
 }
 
 .weather-app-temperature-container {
@@ -139,15 +140,19 @@ a {
 }
 
 .forecast-day {
-    font-size: 16px;
-    opacity: 0.65;
+    font-size: 18px;
+    opacity: 0.5;
+    font-weight: bold;
 }
 
 .forecast-temps {
-    font-size: 13px;
+    font-size: 15px;
+    color: #f65282;
 }
 
+.forecast-temp-max {
+    font-weight: bold;
+}
 .forecast-temp-min {
-    font-size: 13px;
-    opacity: 0.5;
+    opacity: 0.7;
 }
