--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f9f7fe !important; /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+    background-color: #f9f7fe;
     font-family: "Roboto", sans-serif;
 }
 
@@ -8,9 +8,8 @@ body {
     border-radius: 16px;
     box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
     margin: 45px auto;
-    max-width: 600px;
+    max-width: 500px;
     padding: 30px;
-    text-shadow: 2px 3px 5px rgba(52, 88, 161, 0.4);
 }
 
 header {
@@ -29,65 +28,44 @@ header {
 .search-form-input {
     background-color: #f9f7fe;
     border: none;
-    border-radius: 6px;
+    border-radius: 10px;
+    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
     font-size: 16px;
     padding: 15px 20px;
     width: 600%;
-    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
 }
-
-.search-form-button-search {
-    background-color: #ac72db;
+.btn {
+    background-color: #a55ae3;
     border: none;
-    border-radius: 6px;
-    color: white;
-    font-size: 16px;
-    margin-left: 5px;
-    padding: 15px 15px;
+    border-radius: 10px;
     box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
+    color: white;
+    margin-left: 5px;
 }
 
-.search-form-button-get-position {
-    background-color: #ac72db;
-    border: none;
-    border-radius: 6px;
-    color: white;
-    font-size: 16px;
-    margin-left: 5px;
-    padding: 15px 15px;
-    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
-}
-
-.search-form-button-search:hover {
+.btn:hover {
     cursor: pointer;
+}
+
+.search-form-button-search,
+.search-form-button-get-position {
+    font-size: 16px;
+    padding: 15px 15px;
 }
 
 .search-form-button-unit {
-    background-color: #ac72db;
-    border: none;
-    border-radius: 6px;
-    color: white;
     font-size: 20px;
-    margin-left: 5px;
     padding: 15px 20px;
-    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
-}
-
-.search-form-button-unit:hover {
-    cursor: pointer;
-}
-
-.search-form-button-get-position:hover {
-    cursor: pointer;
 }
 
 main {
-    padding: 30px 0;
+    padding: 20px 0;
 }
 
 .weather-app-data {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid #f9f7fe;
 }
 
 .weather-app-city {
@@ -109,21 +87,14 @@ main {
     opacity: 0.8;
 }
 
-.weather-app-temperature-container {
-    border: 1px solid #f6f3ff;
-    border-radius: 20px;
-    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
-    /* box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08); */
-    padding: 15px;
-    background-color: #f9f7fe;
-}
-
 .weather-app-temperature-container-row1 {
     display: flex;
     flex-wrap: wrap-reverse;
 }
 .weather-app-temperature-container-row2 {
-    text-align: right;
+    color: rgba(39, 33, 66, 0.4);
+    font-size: 16px;
+    text-align: center;
 }
 
 .weather-app-icon {
@@ -132,28 +103,17 @@ main {
 }
 
 .weather-app-temperature {
-    font-size: 88px;
+    font-size: 60px;
     font-weight: bold;
     line-height: 88px;
     opacity: 0.7;
 }
 
 .weather-app-unit {
-    font-size: 40px;
-    margin-top: 6px;
+    font-size: 30px;
+    margin-top: 15px;
+    font-weight: bold;
     opacity: 0.7;
-}
-
-footer {
-    border-top: 1px solid #f9f7fe;
-    color: rgb(0, 0, 0, 0.6);
-    font-size: 14px;
-    text-align: center;
-    padding: 30px 0 0 0;
-}
-
-a {
-    color: #a01aed;
 }
 
 .weather-forecast {
@@ -164,12 +124,10 @@ a {
 }
 
 .forecast-day-container {
-    border: 1px solid #f6f3ff;
+    /* border: 1px solid #f6f3ff;
     border-radius: 20px;
-    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
-    /* box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08); */
-    padding: 5px;
-    background-color: #f9f7fe;
+    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1); */
+    padding: 10px auto;
 }
 .forecast-day {
     font-size: 20px;
@@ -187,4 +145,16 @@ a {
 }
 .forecast-temp-min {
     opacity: 0.7;
+}
+
+footer {
+    border-top: 1px solid #f9f7fe;
+    color: rgb(0, 0, 0, 0.6);
+    font-size: 14px;
+    text-align: center;
+    padding: 30px 0 0 0;
+}
+
+a {
+    color: #a01aed;
 }
