--- a/src/styles.css
+++ b/src/styles.css
@@ -34,28 +34,19 @@ header {
     padding: 15px 20px;
     width: 600%;
 }
-.btn {
+.search-form-btn {
     background-color: #a55ae3;
     border: none;
     border-radius: 10px;
     box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
     color: white;
+    font-size: 16px;
     margin-left: 5px;
+    padding: 15px 15px;
 }
 
 .btn:hover {
     cursor: pointer;
-}
-
-.search-form-button-search,
-.search-form-button-get-position {
-    font-size: 16px;
-    padding: 15px 15px;
-}
-
-.search-form-button-unit {
-    font-size: 20px;
-    padding: 15px 20px;
 }
 
 main {
