--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
     background-color: white;
     border-radius: 16px;
     box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
-    margin: 45px auto;
+    margin: 20px auto;
     max-width: 500px;
     padding: 30px;
 }
@@ -42,10 +42,10 @@ header {
     color: white;
     font-size: 16px;
     margin-left: 5px;
-    padding: 15px 15px;
+    padding: 10px 10px;
 }
 
-.btn:hover {
+.search-form-btn:hover {
     cursor: pointer;
 }
 
@@ -54,9 +54,10 @@ main {
 }
 
 .weather-app-data {
-    display: flex;
-    justify-content: space-between;
     border-bottom: 1px solid #f9f7fe;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .weather-app-city {
