--- a/src/styles.css
+++ b/src/styles.css
@@ -117,9 +117,9 @@ main {
 }
 
 .forecast-day-container {
-    /* border: 1px solid #f6f3ff;
+    border: 1px solid #f6f3ff;
     border-radius: 20px;
-    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1); */
+    box-shadow: 6px 5px 20px rgba(0, 0, 0, 0.1);
     margin: 15px auto;
     padding: 10px auto;
 }
